--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
     background-color: #fff;
@@ -85,26 +85,49 @@ nav a:hover {
 }
 main {
     padding: 2rem;
+    box-sizing: border-box;
 }
 
 section {
     margin-bottom: 2rem;
 }
 
+#description {
+    max-width: 100%;
+}
+
+#description h1 {
+    font-size: 2rem;
+}
+
+.description-text {
+    max-width: 70%;
+    margin-right: 20px;
+    margin-bottom: 150px;
+}
+
+.description-image img {
+    max-width: 50%;
+    height: auto;
+}
+
+
 .content {
     max-width: 800px;
-    margin: 0 auto;
 }
 
 h1, h2 {
     color: #EE5249;
+    font-weight: 700;
 }
 
-p {
+.content p {
     line-height: 1.6;
+    font-size: 1.1rem;
+    text-align: justify;
 }
 
-footer {
+footer{
     background-color: #EE5249;
     color: #fff;
     padding: 1rem;
@@ -112,5 +135,16 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
-    box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+}
+
+@media screen and (min-width: 768px) {
+    section#description {
+        max-width: 70%;
+        margin: 0 auto;
+    }
+
+    .content {
+        max-width: 100%;
+    }
 }
