--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
     --primary-color: #EE5249;
-    --secondary-color: #1A1A1A;
+    --secondary-color: rgba(42, 2, 2, 0.86);
     --background-light: #F5F5F5;
     --background-extra-light: #F9F9F9;
     --text-dark: #333;
@@ -57,7 +57,7 @@ nav a:hover {
 .button-1 {
     appearance: none;
     background-color: white;
-    border: 2px solid var(--secondary-color);
+    border: 2px solid black;
     border-radius: 15px;
     color: var(--text-dark);
     cursor: pointer;
@@ -75,10 +75,19 @@ nav a:hover {
     min-width: 120px;
 }
 
+#call-action-button{
+    background-color: rgba(42, 2, 2, 0.66);
+    color: white;
+}
+
 .button-1:hover {
-    background-color: var(--secondary-color);
+    background-color: black;
     color: white;
     transform: translateY(-2px);
+}
+
+#call-action-button, #submit-button:hover{
+    background-color: var(--secondary-color);
 }
 
 .button-1:active {
@@ -259,19 +268,48 @@ footer a:hover {
     color: var(--background-light);
 }
 
+#hamburger {
+    display: none;
+}
+
+.hamburger-overlay {
+    display: none;
+}
+
 @media screen and (max-width: 768px) {
-    header {
-        flex-direction: column;
-        align-items: flex-start;
+    #hamburger {
+        display: block;
+        margin-right: 2%;
     }
 
-    nav ul {
-        flex-direction: column;
-        align-items: center;
+    .hamburger-overlay {
+        display: none;
+        top: 0;
+        left: 0;
+        width: 60%;
+        height: 800vh;
+        position: fixed;
+        background-color: var(--primary-color);
+        overflow: hidden;
+        z-index: 200;
+        opacity: 96%;
     }
 
-    nav ul li {
-        margin: 10px 0;
+    .navbar {
+        display: none;
+    }
+
+    .navbar ul {
+        top: 10%;
+        left: 20%;
+        max-width: 40%;
+        position: fixed;
+        flex-direction: column;
+        z-index: 201;
+    }
+
+    .navbar ul li {
+        margin-bottom: 70%;
     }
 
     main {
@@ -358,7 +396,6 @@ footer a:hover {
     bottom: 120px;
     right: 120px;
     display: flex;
-    /*flex-direction: column;*/
     align-items: center;
 }
 
